--- a/index.html
+++ b/index.html
@@ -652,8 +652,8 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
-                <data value="80">80%</data>
+                <h5 class="h5">FullStack</h5>
+                <data value="80">65%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -665,7 +665,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
+                <h5 class="h5">HTML/CSS/JS</h5>
                 <data value="70">70%</data>
               </div>
 
@@ -678,8 +678,8 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
-                <data value="90">90%</data>
+                <h5 class="h5">Java/Spring</h5>
+                <data value="90">50%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -691,8 +691,8 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
-                <data value="50">50%</data>
+                <h5 class="h5">Python</h5>
+                <data value="50">60%</data>
               </div>
 
               <div class="skill-progress-bg">
